# pipeline

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/inc/: common.h  source_info.h
src/inc/banner/: banner.hxx
src/inc/cout/: cout.hxx
src/inc/ctime/: ctime.hxx
src/inc/deploy/: all.h  deploy.hxx
src/inc/random/: random.hxx
src/inc/scope_exit/: scope_exit.hxx
src/inc/test/: all.h  test.hxx
src/inc/uuid/: uuid.hxx
